feat: gamma unit trab

--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -1,29 +1,22 @@
-@Manual{r,
-    title = {R: A Language and Environment for Statistical Computing},
-    author = {{R Core Team}},
-    organization = {R Foundation for Statistical Computing},
-    address = {Vienna, Austria},
-    year = {2022},
-    url = {https://www.R-project.org/},
-  }
-  
-@article{zhang2016simplexreg,
-  title={simplexreg: An R package for regression analysis of proportional data using the simplex distribution},
-  author={Zhang, Peng and Qiu, Zhenguo and Shi, Chengchun},
-  journal={Journal of Statistical Software},
-  volume={71},
-  number={11},
-  year={2016}
+@article{grassia1977family,
+  title={On a family of distributions with argument between 0 and 1 obtained by transformation of the gamma and derived compound distributions},
+  author={Grassia, A},
+  journal={Australian Journal of Statistics},
+  volume={19},
+  number={2},
+  pages={108--114},
+  year={1977},
+  publisher={Wiley Online Library}
+}
+@mastersthesis{pereira2017improved,
+  title={Improved likelihood inference in unit gama regressions},
+  author={Pereira, Ana Cristina Guedes},
+  year={2017},
+  school={Universidade Federal de Pernambuco}
 }
 
-
-@article{barndorff1991some,
-  title={Some parametric models on the simplex},
-  author={Barndorff-Nielsen, Ole E and J{\o}rgensen, Bent},
-  journal={Journal of multivariate analysis},
-  volume={39},
-  number={1},
-  pages={106--116},
-  year={1991},
-  publisher={Elsevier}
+@phdthesis{limadistribuiccoes,
+  title={Distribui{\c{c}}{\~o}es de probabilidade no intervalo unit{\'a}rio},
+  author={Lima, Francim{\'a}rio Alves de},
+  school={Universidade de S{\~a}o Paulo}
 }
